# flight-assignment

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: cli.rs  handlers.rs  main.rs  models.rs  solution.rs
