[package]
name = "volume-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
clap = { version = "3.1.6", features = ["derive","env"] }
rustgym-util = "0.2.4"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
